--- a/src/app/shared/error-page/error-page.component.html
+++ b/src/app/shared/error-page/error-page.component.html
@@ -1,1 +1,7 @@
-<p>error-page works!</p>
+<h2>error-page works!</h2>
+<ul>
+  <li><a routerLink="/auth/login">Ir a Login</a></li>
+  <li><a routerLink="/auth/registro">Ir a Registro</a></li>
+  <li><a routerLink="/heroes/listado">Ir a Listado</a></li>
+  <li><a routerLink="/heroes/agregar">Ir a Agregar</a></li>
+</ul>
